--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,11 +15,12 @@
     </nav>
     <% console.log(notes) %>
     <div class="container w-full h-screen bg-slate-500 text-white flex items-center justify-center">
-        <div class="content border-2 border-pink-200 w-11/12 h-screen flex flex-wrap items-start justify-start gap-x-14 gap-y-4 p-8">
+        <div class="content border-2 border-pink-200 w-11/12 h-screen flex flex-wrap items-start justify-start gap-x-14 gap-y-0 p-8">
             <% notes.forEach(note => { %>
-                <div class="content border-2 border-white-500 w-72 h-72">
-                    <h4><%= note.title %></h4>
-                    <p><%= note.content %></p>
+                <div class="content border-2 border-white-500 w-72 h-auto flex flex-col gap-5 pt-2 ">
+                    <h4 class="text-center text-xl font-bold"><%= note.title %></h4>
+                    <p class="ml-3"><%= note.content %></p>
+                    <form action="" method="get" class="flex justify-end"><button type="submit">Edit</button></form>
                 </div>
             <% }) %>
 <!-- 
