--- a/views/index.ejs
+++ b/views/index.ejs
@@ -15,7 +15,7 @@
     </nav>
     <%# console.log(notes) %>
     <div class="container w-full h-screen bg-slate-500 text-white flex items-center justify-center">
-        <div class="content border-2 border-pink-200 w-11/12 h-screen flex flex-wrap items-start justify-start gap-x-14 gap-y-4 p-8">
+        <div class="content w-11/12 h-screen flex flex-wrap items-start justify-start gap-x-14 gap-y-4 p-8">
             <% notes.forEach(note => { %>
                 <%# console.log(note.notesid) %>
                 <div class="content border-2 border-white-500 w-72 h-auto flex flex-col gap-5 pt-2">
