--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,16 +19,15 @@
             <div class=" h-auto flex flex-wrap items-start justify-start gap-x-10 gap-y-4 p-8">
                 <% notes.forEach(note => { %>
                     <%# console.log(note.notesid) %>
-                    <div class="content border-2 border-white-500 w-72 h-auto flex flex-col gap-4 pt-2">
-                        <form action="/deleteNote" method="post" class="flex justify-end">
-                            <input type="hidden" name="id" value="<%= note.notesid %>">
-                            <button type="submit">
-                                <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 hover:bg-red-600">
-                                    <path stroke-linecap="round" stroke-linejoin="round" d="m14.74 9-.346 9m-4.788 0L9.26 9m9.968-3.21c.342.052.682.107 1.022.166m-1.022-.165L18.16 19.673a2.25 2.25 0 0 1-2.244 2.077H8.084a2.25 2.25 0 0 1-2.244-2.077L4.772 5.79m14.456 0a48.108 48.108 0 0 0-3.478-.397m-12 .562c.34-.059.68-.114 1.022-.165m0 0a48.11 48.11 0 0 1 3.478-.397m7.5 0v-.916c0-1.18-.91-2.164-2.09-2.201a51.964 51.964 0 0 0-3.32 0c-1.18.037-2.09 1.022-2.09 2.201v.916m7.5 0a48.667 48.667 0 0 0-7.5 0" />
-                                </svg>
-                            </button>
-                        </form>
+                <div class="w-auto h-auto">
+                    <form action="/deleteNote" method="post" class="flex justify-end">
+                        <input type="hidden" name="id" value="<%= note.notesid %>">
+                        <button type="submit" class="text-slate-900 w-10 rounded-2xl -mb-3.5 -mr-3.5 font-semibold text-xl bg-slate-200">
+                            X
+                        </button>
+                    </form>
 
+                    <div class="content border-2 border-white-500 w-72 h-auto flex flex-col gap-4 pt-2">
                         <input type="hidden" name="id" value="<%= note.notesid %>">
                         <h4 class="text-center text-xl font-bold"><%= note.title %></h4>
                         <p class="text-justify px-3"><%= note.content %></p>
@@ -42,6 +41,7 @@
                             </button>
                         </form>
                     </div>
+                </div>
                 <% }) %>
             </div>
         </div>
